[package]
name = "TeleApi"
version = "0.1.4"
edition = "2021"
authors = ["Ice MrAws.developer@gmail.com"]
description = "A package for help telegram bots programmers"
documentation = "https://github.com/ArabShadows/TeleApi"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.192", features = ["derive"]}
serde_derive = "1.0.192"
serde_json = "1.0.108"
anyhow = "1.0.75"
tokio = { version="1.34.0", features=["full"] }
